--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/rishabhdevyadav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/rishabhdevyadav"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://medium.com/@rishabhdevyadav"><i class="fab fa-medium"></i></a>
+                        <a class="social-icon" href="https://www.youtube.com/channel/UCM7OSxQBU4KNPN_mZvcjn4A/videos"><i class="fab fa-youtube"></i></a>
                         <!-- <a class="social-icon" href="https://www.facebook.com/rishabh.d.yadav"><i class="fab fa-facebook-f"></i></a> -->
                         <!-- <a class="social-icon" href="https://www.instagram.com/_rishabh_dev_/"><i class="fab fa-instagram"></i></a> -->
                     </div>
@@ -164,7 +165,7 @@
                         
                     <p style="font-weight: bold;">1. “Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface”, Rishabh Dev Yadav, Shrey Agarwal, Kamalakar Karlapalem, ICRA 2020 Workshop: Multi-Robot.
 
-                    <p style="font-weight: bold;">2. “Efficient Manoeuvring of Quadrotor under Constrained Space and Predefined Accuracy”, Sourish Ganguly, Viswa Narayanan Sankaranarayanan, Rishabh Dev Yadav, Suraj Bonagiri Venkata Sai Gopala, Spandan Roy, IROS 2021.
+                    <p style="font-weight: bold;">2. “Efficient Manoeuvring of Quadrotor under Constrained Space and Predefined Accuracy”, Sourish Ganguly, Viswa Narayanan Sankaranarayanan, Suraj Bonagiri Venkata Sai Gopala, Rishabh Dev Yadav, Spandan Roy, IROS 2021.
 
                 </div>
             </section>
@@ -309,6 +310,22 @@
 <!-- Poject 8 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                        <div class="subheading mb-2">Co-operative multi-robot dynamic formation control</div>
+                        <main class='main'>
+                        <section class='left section'>
+                        <p>Leader-follower formation control algorithm has been used for the coordination of multiple agents for maintaining a formation. Robots' formation can shrink and expand according to it's environment.</p>
+                        </section>
+                        <section class='right section'>
+
+                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/amEgMHKPeXo" allowfullscreen></iframe>
+                        </section>
+                        </main>
+                        </div>
+                    </div>
+                    <hr class="mb-3" />
+
+<!--                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                         <div class="subheading mb-2">Formation Control using PID and Virtual Structure</div>
                         <p>A matlibplot simulation to show formation control</p>
                         <img class="animated-gif" src="https://raw.githubusercontent.com/rishabhdevyadav/multi_robot_matlibplot_simulation/main/gif/PID.gif" width="55%">
@@ -316,7 +333,7 @@
                         </div>
                     </div>
                     <hr class="mb-3" />
-
+ -->
 
 <!-- Poject 6 -->
 <!--                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -401,17 +418,17 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            <p>Motion Capture System, 3-D Printing, SBC(Raspberry Pi, Intel NUC, Jetson Nano), Pixhawk, Actuators, Pneumatics, Realsense RGBD Camera</p>
+                            <p>Motion Capture System, 3-D Printing, SBC(Raspberry Pi, Intel NUC, Jetson Nano), Pixhawk, Actuators, Pneumatics, Realsense RGBD Camera, Indoor and Outdoor Aerial and Ground Robots</p>
                         </li>
                     </ul>
 
-                    <div class="subheading mb-3">Robots</div>
+<!--                     <div class="subheading mb-3">Robots</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             <p>Outdoor Multi-Terrain Robot, Indoor Skid-Steer Robot, Outdoor Autonomous Quadcopter, Indoor Aerial Robot</p>
                         </li>
-                    </ul>
+                    </ul> -->
 
                     <div class="subheading mb-3">Robot Localization System</div>
                     <ul class="fa-ul mb-0">
