--- a/projects.html
+++ b/projects.html
@@ -216,7 +216,7 @@
                         <section class='left section'>
                         <p style="font-size:16px" >It is a local planner to find safe area to land. At the land position, the vehicle will start to descend towards the ground and if the ground is flat, the vehicle will continue landing. Otherwise it will evaluate the close by terrain in a squared spiral pattern until it finds a good enough ground to land on. Autonomous landing system is upgraded with tunable parameters such as; The size of spiral trajectory for searching landing area; A landing threshold to vary according to height of landing gear. 
 
-                        It is implemented on quadcopter having a downward facing D455 camera with Intel NUC i7 SBC and Pixhawk flght controller.[<a style="color:blue;" href="https://www.youtube.com/embed/IrvUYQut9FI">Simulation</a>] [<a style="color:blue;" href="https://github.com/Garuda-IIITH-RRC/Autonomous_Safe_Landing_Drone_Hardware">Github</a>]</p>
+                        It is implemented on quadcopter having a downward facing D455 camera with Intel NUC i7 SBC and Pixhawk flght controller.[<a style="color:blue;" href="https://youtu.be/uB59H4pbhx8">Simulation</a>] [<a style="color:blue;" href="https://github.com/Garuda-IIITH-RRC/Autonomous_Safe_Landing_Drone_Hardware">Github</a>]</p>
                         </section>
                         <section class='right section'>
 
