--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-1">International Institute of Information Technology, Hyderabad</h3>
                             <p class="mb-0">MS by Research (CSE)</p>
-                            <p class="mb-0">Thesis Title: “Techniques for a Failsafe Visual Inertial SLAM Systems” (see here for my thesis)</p>
+                            <p class="mb-0">Thesis Title: “Adaptive Sliding Mode Control for Uncertain Euler Lagrange Dyanmics”</p>
                             <!-- <p class="mb-2">Supervisor:- Dr. Spandan Roy</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 - Ongoing</span></div>
