--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Savvina Drougouti" />
 
-    <title>Responsive Resume Template</title>
+    <title>Rishabh Dev Yadav</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
