--- a/experience.html
+++ b/experience.html
@@ -190,7 +190,7 @@
                             <h3 class="mb-1">Teaching Assistant</h3>
                             <p class="mb-1">Course Name</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - Ongoing</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">-----</span></div>
                     </div>
 
 
@@ -199,12 +199,48 @@
                             <h3 class="mb-1">Teaching Assistant</h3>
                             <p class="mb-1">Course Name</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2020 - June 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">-----</span></div>
                     </div>
             </section>
 
 
             <hr class="m-0" />
+
+
+            <section class="resume-section" id="teaching">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Co-curricular activities</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">ROBOCON 2019:  </h3>
+                            <p class="mb-1">Autonomous Quadruped Legged Robot</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2019</span></div>
+                    </div>
+
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">ROBOCON 2018: </h3>
+                            <p class="mb-1">Autonomous ShuttleCock Throwing Robot</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017-2018</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">ROBOCON 2017: </h3>
+                            <p class="mb-1">Semi-Autonomous Disc Throwing Robot</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2016-2017</span></div>
+                    </div>
+            </section>
+
+
+            <hr class="m-0" />
+
+
           </div>
 
     <!-- Bootstrap core JavaScript -->
