--- a/experience.html
+++ b/experience.html
@@ -142,39 +142,70 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
                             <h3 class="mb-1">Research Associate</h3>
-                            <p class="mb-1">International Institute of Information Technology, Hyderabad.</p>
-                            <p style="color:Red;"> Autonmous Navigation of Quadcopters.</p>
+                            <p class="mb-1">Robotics Research Center, IIIT Hyderabad.</p>
+                            <p style="color:Red;"> Non-Linear Control for Aerial Manipulation.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - Ongoing</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Ongoing</span></div>
                     </div>
 
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">Research Associate</h3>
+                            <p class="mb-1">Robotics Research Center, IIIT Hyderabad.</p>
+                            <p style="color:Red;"> Autonomous Navigation of Multi-rotor drones. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - July 2021</span></div>
+                    </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
                             <h3 class="mb-1">Research Internship</h3>
-                            <p class="mb-1">Indian Institute of Technology, Kanpur.</p>
-                            <p style="color:Red;">Attitude estimation technique of high-speed projectile using IMU and GPS.</p>
+                            <p class="mb-1">Aerospace Department, IIT-Kanpur.</p>
+                            <p style="color:Red;">Precision Guidance Kit for Artillery Shells.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2020 - June 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2020 - July 2020</span></div>
                     </div>
 
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
                             <h3 class="mb-1">Research Associate</h3>
-                            <p class="mb-1">International Institute of Information Technology, Hyderabad.</p>
-                            <p style="color:Red;">Control and Planning of co-operative Multi-Robot Payload Transportation System. </p>
+                            <p class="mb-1">Agents and Applied Robotics Group , IIIT-Hyderabad.</p>
+                            <p style="color:Red;">Co-operative Multi-agent Mobile Robots. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2019 - March 2020</span></div>
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
-                            <h3 class="mb-1">Research Internship</h3>
-                            <p class="mb-1">Indian Institute of Information Technology, Allahabad.</p>
-                            <p style="color:Red;">Kinematic Modelling and Trajectory Tracking of Holonomic Robot.</p>
+                            <h3 class="mb-1">Project Associate</h3>
+                            <p class="mb-1">Mechatronics Lab, IIIT-DM Jabalpur.</p>
+                            <p style="color:Red;">Multi-terrain Mobile Robot. </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2018 - Dec 2018</span></div>
+                    </div>                    
+
+
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">Summer Internship</h3>
+                            <p class="mb-1">Micro Air Vehicle Lab, IISc Banglore.</p>
+                            <p style="color:Red;">Unmanned aerial vehicle design.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 - July 2017</span></div>
+                    </div>   
+
+
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">Summer Internship</h3>
+                            <p class="mb-1">Indian Institute of Information Technology, Allahabad.</p>
+                            <p style="color:Red;">Mobile Robotics.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2016 - July 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -187,19 +218,10 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
-                            <h3 class="mb-1">Teaching Assistant</h3>
-                            <p class="mb-1">Course Name</p>
+                            <h3 class="mb-1">Teaching Assistant, IIIT Hyderabad.</h3>
+                            <p class="mb-1">Robotics - Dynamics and Control.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">-----</span></div>
-                    </div>
-
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-1">Teaching Assistant</h3>
-                            <p class="mb-1">Course Name</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">-----</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Monsoon 2022</span></div>
                     </div>
             </section>
 
@@ -209,7 +231,7 @@
 
             <section class="resume-section" id="teaching">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Co-curricular activities</h2>
+                    <h2 class="mb-5">Key Highlights</h2>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
                         <div class="flex-grow-1">
@@ -235,6 +257,16 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2016-2017</span></div>
                     </div>
+
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-1">Social Volunteering: </h3>
+                            <p class="mb-1">Student Counselling Coordinator, IIITDM Jabalpur </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018-2019</span></div>
+                    </div>
+
             </section>
 
 
