--- a/gallery.html
+++ b/gallery.html
@@ -143,6 +143,22 @@
   <!-- <img src="assets/img/minion.jpg" alt="Sample photo"> -->
   <!-- <div class="desc">Add a description of the image here</div> -->
   <img src="assets/img/rover.png" alt="Sample photo">
+
+  <img src="assets/img/image1.png" alt="Sample photo">
+  <img src="assets/img/image2.jpg" alt="Sample photo">
+  <img src="assets/img/image3.png" alt="Sample photo">
+  <img src="assets/img/image4.jpg" alt="Sample photo">
+  <img src="assets/img/image5.png" alt="Sample photo">
+  <img src="assets/img/image6.png" alt="Sample photo">
+  <img src="assets/img/image7.png" alt="Sample photo">
+  <!-- <img src="assets/img/image8.png" alt="Sample photo"> -->
+  <img src="assets/img/image9.jpg" alt="Sample photo">
+  <img src="assets/img/image10.png" alt="Sample photo">
+  <img src="assets/img/image11.png" alt="Sample photo">
+
+
+
+
   <!-- <div class="desc">Add a description of the image here</div> -->
   <img src="assets/img/robocon.jpg" alt="Sample photo">
   <!-- <div class="desc">Add a description of the image here</div> -->
