--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h3 style="text-align:center;" class="mb-2">Robotics Graduate Student, Robotics Research Center (RRC)</h3>
                     <h3 style="text-align:center;" class="mb-3">International Institute of Information Technology, Hyderabad, India.</h3>
 
-                    <p class="mb-0">I am a Robotics Graduate Student involved on various aerial and ground robots for autonmous navigation. My research interest includes Kinematic and Dynamic Modelling of novel robotics system and non-linear controller design. I have worked on Euler Lagrange System and Adaptive Sliding Model Controller.</p>
+                    <p class="mb-0">I am a Robotics Graduate Student, involved with various robotics platforms like manipulators, mobile robots, and indoor and outdoor aerial robots. My research interest includes Kinematic and Dynamic Modelling of novel robotics system and non-linear controller design. I am currently working on aerial manipulators, cable-suspended payloads under quadrotors, and series elastic actuator (SEA) based manipulators. I have designed adapive sliding mode controller, switched controller, artifical time delay controller and robust state-constraint controller. My key skill is robotics system integration and software development.</p>
                 </div>
             </section>
 
@@ -156,7 +156,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-1">International Institute of Information Technology, Hyderabad</h3>
                             <p class="mb-0">MS by Research (CSE)</p>
-                            <p class="mb-0">Thesis Title: “Adaptive Sliding Mode Control for Uncertain Euler Lagrange Dyanmics”</p>
+                            <p class="mb-0">Thesis Title: “Adaptive Robust Control for Uncertain Euler Lagrange Dyanmics”</p>
                             <!-- <p class="mb-2">Supervisor:- Dr. Spandan Roy</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 - Ongoing</span></div>
