--- a/publications.html
+++ b/publications.html
@@ -133,24 +133,74 @@
       </div>
     </nav>
 
-            <div class="topnav">
+<!--             <div class="topnav">
                 <a class="active" href="publications.html">Journal</a>
                 <a href="conference.html">Conference</a>
                 <a href="workshop.html">Workshop</a>
                 <a href="preprint.html">Pre-print</a>
             </div> 
+ -->
+
 
 
             <section class="resume-section" id="teaching">
                 <div class="resume-section-content">
-                    <h2 style="text-align:left;" class="mb-1">2022</h2>
-                    <p class="mb-1" style="font-size:15px"> 1. *V. Shankaranarayanan, <b>R. D. Yadav</b>, R. K. Swyampakula, S. Ganguly and S. Roy, <i>"Robustifying Payload Carrying Operations for Quadrotors Under Time-Varying State Constraints and Uncertainty"</i> IEEE Robotics and Automation Letters, vol. 7, no. 2, pp. 4885-4892. [<a style="color:blue;" href="https://ieeexplore.ieee.org/document/9720735">Paper</a>] [<a style="color:blue;" href="https://youtu.be/mLv90hLakBk">Video</a>]</p>
+                    <h2 style="text-align:left;" class="mb-1">Under Review |</h2>
+                    <p class="mb-1" style="font-size:15px">1. Swati Dantu*, <b>Rishabh Dev Yadav</b>*, Spandan Roy, and Simone Baldi, ”Adaptive Tracking and Anti-swing Control of Quadrotors Carrying Suspended Payload”,Type of submission: Full Version, Submission number: 22-0674, IEEE Transactions on Control Systems Technology</a>]</p>
 
-                    <p class="mb-1" style="font-size:12px"> <i>*selected by IEEE International Conference on Robotics and Automation (ICRA'22) Program Committee for presentation at the Conference, under the scheme of 'RAL with ICRA option'. </i></p>
+                    <p class="mb-1" style="font-size:15px">2. Swati Dantu*, <b>Rishabh Dev Yadav</b>*, Spandan Roy, and Simone Baldi, ”Adaptive Anti-swing Control for Clasping Operations in Quadrotors with Cable-suspended Payload”, Type of submission: Contributed paper, Submission number: 632, IEEE International Conference on Robotics and Automation (ICRA) 2023.</a>]</p>
+
+                    <p class="mb-1" style="font-size:12px"> <i>*equal contribution. </i></p>
             </section>
 
 <hr class="m-0" />
 
+
+
+            <section class="resume-section" id="teaching">
+                <div class="resume-section-content">
+                    <h2 style="text-align:left;" class="mb-1">Journals |</h2>
+                    <p class="mb-1" style="font-size:15px"> 1. **V. Shankaranarayanan, <b>Rishabh Dev Yadav</b>, R. K. Swyampakula, S. Ganguly and S. Roy, <i>"Robustifying Payload Carrying Operations for Quadrotors Under Time-Varying State Constraints and Uncertainty"</i> IEEE Robotics and Automation Letters, vol. 7, no. 2, pp. 4885-4892. [<a style="color:blue;" href="https://ieeexplore.ieee.org/document/9720735">Paper</a>] [<a style="color:blue;" href="https://www.youtube.com/watch?v=mLv90hLakBk&t=1s&ab_channel=rishabhyadavrishabhyadav">Video</a>]</p>
+
+                    <p class="mb-1" style="font-size:12px"> <i>**selected by IEEE International Conference on Robotics and Automation (ICRA'22) Program Committee for presentation at the Conference, under the scheme of 'RAL with ICRA option'. </i></p>
+            </section>
+
+<hr class="m-0" />
+
+
+
+
+            <section class="resume-section" id="teaching">
+                <div class="resume-section-content">
+                    <h2 style="text-align:left;" class="mb-1">Conferences |</h2>
+
+                    <p class="mb-1" style="font-size:15px"> 1. Swati Dantu*, <b>Rishabh Dev Yadav</b>*, Spandan Roy, Jinoh Lee and Simone Baldi, ”Adaptive Artificial Time Delay Control for Quadrotors under State-dependent Unknown Dynamics”, IEEE ROBIO 2022.[<a style="color:blue;" href="https://drive.google.com/file/d/14FFsphs4995vyatkF5ekha9TWC2P9Jbg/view">Paper</a>] </p>
+
+                    <p class="mb-1" style="font-size:15px"> 2. B. V. S. G Suraj, Viswa N. Sankaranarayanan, <b>Rishabh Dev Yadav</b> and Spandan Roy, ”Introducing Scissor Mechanism based Novel Reconfigurable Quadrotor: Design, Modelling and Control”, IEEE ROBIO 2022.[<a style="color:blue;" href="https://drive.google.com/file/d/1WZ9dnpIomhuxUBVYQdqPC0EZxc4nsKDU/view">Paper</a>] </p>
+
+                   <p class="mb-1" style="font-size:15px"> 3. S. Ganguly, V. Shankaranarayanan, B. V. S. G. Suraj, <b>Rishabh Dev Yadav</b> and S. Roy "<i>Robust Manoeuvring of Quadrotor under Full State Constraints </i>" Automatic Control and Dynamical Optimization Society (ACODS 2022), Feb 22- 25, IIT Guwahati, 2022.[<a style="color:blue;" href="https://www.sciencedirect.com/science/article/pii/S2405896322000064">Paper</a>] [<a style="color:blue;" href="https://www.youtube.com/watch?v=10QTFtCpmB0&ab_channel=rishabhyadavrishabhyadav">Video</a>]</p>
+                   
+                    <p class="mb-1" style="font-size:15px"> 4. Sudarshan S Harithas, <b>Rishabh Dev Yadav</b>, Deepak Singh, Arun Kumar Singh, K Madhava Krishna   "<i>CCO-VOXEL: Chance Constrained Optimization over Uncertain Voxel-Grid Representation for Safe Trajectory Planning</i>" IEEE International Conference on Robotics and Automation  (ICRA 2022), May 23- 27, Philadelphia (PA), USA, 2022.[<a style="color:blue;" href="https://arxiv.org/abs/2110.02904">Paper</a>] [<a style="color:blue;" href="https://www.youtube.com/watch?v=qNAqAlb7m3E&t=1s&ab_channel=sudarshans.harithas">Video</a>]</p>
+
+                    <p class="mb-1" style="font-size:15px"> 5. S. Ganguly, V. Shankaranarayanan, B. V. S. G. Suraj, <b>Rishabh Dev Yadav</b> and S. Roy "<i>Efficient Manoeuvring of Quadrotor under Constrained Space and Predefined Accuracy</i>" The 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021), 27th September - 1st October, Prague, Czech Republic, 2021.[<a style="color:blue;" href="https://ieeexplore.ieee.org/document/9636323">Paper</a>] </p>
+
+                     <p class="mb-1" style="font-size:15px">6.  <b>Rishabh Dev Yadav</b>,  V. Shankaranarayanan and S. Roy, "<i>Adaptive Sliding Mode Control for Autonomous Vehicle Platoon under Unknown Friction Forces"</i>, IEEE 20th International Conference on advanced robotics (ICAR 2021), December 7-10, Ljubljana, Slovenia, pp. 410-415, 2021.[<a style="color:blue;" href="https://ieeexplore.ieee.org/document/9659441">Paper</a>] [<a style="color:blue;" href="https://www.youtube.com/watch?v=7yHY9atSeK8&ab_channel=rishabhyadavrishabhyadav">Video</a>]</p>
+
+                     <p class="mb-1" style="font-size:12px"> <i>*equal contribution. </i></p>
+            </section>
+
+
+<hr class="m-0" />
+
+
+            <section class="resume-section" id="teaching">
+                <div class="resume-section-content">
+                    <h2 style="text-align:left;" class="mb-1">Workshops |</h2>
+
+                    <p class="mb-1" style="font-size:15px"> 1. <b>Rishabh Dev Yadav</b>, Shrey Agrawal, Kamalakar Karlapalem "<i>Maintaining the Level of a Payload carried by Multi-Robot System on Irregular Surface</i>" ICRA 2020 Workshop: Multi-Robot, June 4th, 2020.[<a style="color:blue;" href="https://drive.google.com/file/d/1FvLeLFt3jg9_pA6T1wFDbbksgP5Yhkkb/view">Paper</a>] [<a style="color:blue;" href="https://www.youtube.com/watch?v=mw2Bc3rAbrg&list=PL8HjNZ2KsBU-cvAbS_0NfrOr1ayEkYIMO&index=6&ab_channel=rishabhyadavrishabhyadav">Video</a>] [<a style="color:blue;" href="https://sites.google.com/umd.edu/icra-2020-ws-multi-robot/program">Workshop</a>]</p>
+            </section>
+
+<hr class="m-0" />
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
