--- a/projects.html
+++ b/projects.html
@@ -229,7 +229,7 @@
                         </section>
                         <section class='right section'>
 
-                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/qKHB9nG-Lkg" allowfullscreen></iframe>
+                        <iframe volume="0" width="450" height="250" src="https://www.youtube.com/embed/jyCffJ3ZtF4?list=PL8HjNZ2KsBU-cvAbS_0NfrOr1ayEkYIMO" allowfullscreen></iframe>
                         </section>
                         </main>
                         </div>
