--- a/projects.html
+++ b/projects.html
@@ -318,6 +318,32 @@
                     <hr class="mb-1" />
 
 
+
+
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                        <div class="flex-grow-1">
+                        
+                        <main class='main'> 
+                        <section class='left section'>
+                        <div  class="mb-2"> <h3 style="font-size:16px">Virtual Structure Fromation Control</a> </h3></div>
+                        <p style="font-size:16px"></p>
+                        <img style="width:450px;height:300px;"  src="https://raw.githubusercontent.com/rishabhdevyadav/multi_robot_matlibplot_simulation/main/gif/Virtual_structure.gif" width="100%" alt="Sample photo" allowfullscreen></img>
+                        </section>
+
+                        <section class='right section'>
+                        <div  class="mb-2"> <h3 style="font-size:16px">Leader Follower Fromation Control</a> </h3></div>
+                        <p style="font-size:16px"></p>
+              
+                        <img style="width:600px;height:320px;" src="https://raw.githubusercontent.com/rishabhdevyadav/multi_robot_matlibplot_simulation/main/gif/PID.gif" width="100%" alt="Sample photo" allowfullscreen></img>
+                        </section>
+                        </main>
+                        </div>
+                    </div>
+                    <hr class="mb-2" />
+
+
+
 <!-- Poject 8 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
